--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -9,7 +9,8 @@ input::placeholder {
 /* Card start*/
 .card {
   overflow: hidden;
-  background: yellow;
+  border-radius: 10%;
+  /* background: #ffabc9; */
   /* color: var(--bg); */
 }
 
@@ -32,4 +33,40 @@ input::placeholder {
 .fa {
   color: ghostwhite;
   margin: 10px
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 200px;
+  height: 200px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  
+}
+/* Style the back side */
+.flip-card-back {
+  transform: rotateY(180deg);
 }
